--- a/src/main/java/views/MainView.form
+++ b/src/main/java/views/MainView.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="views.MainView">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="508" height="400"/>
@@ -8,26 +8,45 @@
     <properties/>
     <border type="none"/>
     <children>
-      <tabbedpane id="b069d" binding="mainTabs">
+      <component id="8b46f" class="javax.swing.JButton" binding="addressList">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="4" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="200" height="200"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="379" height="30"/>
           </grid>
         </constraints>
-        <properties/>
-        <border type="none"/>
-        <children>
-          <grid id="b7549" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
-            <constraints>
-              <tabbedpane title="Clientes"/>
-            </constraints>
-            <properties/>
-            <border type="none"/>
-            <children/>
+        <properties>
+          <text value="Acessar endereços"/>
+        </properties>
+      </component>
+      <component id="afd53" class="javax.swing.JButton" binding="phoneLine">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="379" height="30"/>
           </grid>
-        </children>
-      </tabbedpane>
+        </constraints>
+        <properties>
+          <text value="Gerenciar linhas telefônicas"/>
+        </properties>
+      </component>
+      <component id="e07b7" class="javax.swing.JButton" binding="clientList">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="379" height="30"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="Acessar clientes"/>
+        </properties>
+      </component>
+      <component id="1a724" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="Fira Code Retina" size="14" style="0"/>
+          <text value="Bem vindo ao sistema de telefonia."/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
