created address list

--- a/src/main/java/views/ClientsList.form
+++ b/src/main/java/views/ClientsList.form
@@ -16,7 +16,7 @@
           <text value="Excluir"/>
         </properties>
       </component>
-      <component id="38adf" class="javax.swing.JTable" binding="table1" default-binding="true">
+      <component id="38adf" class="javax.swing.JTable" binding="clientTable">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="50"/>
