--- a/src/main/java/views/AddressList.form
+++ b/src/main/java/views/AddressList.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="views.AddressList">
-  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -19,14 +19,6 @@
           <intercellSpacing width="1" height="1"/>
         </properties>
       </component>
-      <component id="e90cf" class="javax.swing.JButton" binding="deleteButton">
-        <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Excluir"/>
-        </properties>
-      </component>
       <component id="876a5" class="javax.swing.JButton" binding="refreshTableButton">
         <constraints>
           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
@@ -35,12 +27,28 @@
           <text value="Atualizar tabela"/>
         </properties>
       </component>
-      <component id="61b05" class="javax.swing.JButton" binding="addButton">
+      <component id="61b05" class="javax.swing.JButton" binding="addAddressButton">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Adicionar novo"/>
+        </properties>
+      </component>
+      <component id="e90cf" class="javax.swing.JButton" binding="deleteAddressButton">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Excluir endereço"/>
+        </properties>
+      </component>
+      <component id="8e0a3" class="javax.swing.JButton" binding="editAddressButton">
+        <constraints>
+          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Editar endereço"/>
         </properties>
       </component>
     </children>
