--- a/src/main/java/views/ClientsList.form
+++ b/src/main/java/views/ClientsList.form
@@ -18,20 +18,20 @@
           <autoResizeMode value="1"/>
         </properties>
       </component>
-      <component id="1870" class="javax.swing.JButton" binding="editarButton" default-binding="true">
+      <component id="1870" class="javax.swing.JButton" binding="editClientButton">
         <constraints>
           <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Editar"/>
+          <text value="Editar cliente"/>
         </properties>
       </component>
-      <component id="52496" class="javax.swing.JButton" binding="deleteButton">
+      <component id="52496" class="javax.swing.JButton" binding="deleteClientButton">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Excluir"/>
+          <text value="Excluir cliente"/>
         </properties>
       </component>
       <vspacer id="13439">
@@ -56,7 +56,7 @@
           <text value="Atualizar tabela"/>
         </properties>
       </component>
-      <component id="f4f76" class="javax.swing.JButton" binding="addButton">
+      <component id="f4f76" class="javax.swing.JButton" binding="addClientButton">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
