--- a/src/main/java/views/ManageClient.form
+++ b/src/main/java/views/ManageClient.form
@@ -24,7 +24,7 @@
           <text value="Endereço:"/>
         </properties>
       </component>
-      <component id="e62ec" class="javax.swing.JComboBox" binding="comboBoxEnderecos">
+      <component id="e62ec" class="javax.swing.JComboBox" binding="comboBoxAddresses">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
