--- a/src/main/java/views/ClientsList.form
+++ b/src/main/java/views/ClientsList.form
@@ -1,37 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="views.ClientsList">
-  <grid id="27dc6" binding="jpanel" layout-manager="GridLayoutManager" row-count="5" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="jpanel" layout-manager="GridLayoutManager" row-count="5" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="604" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <component id="38adf" class="javax.swing.JTable" binding="clientTable">
-        <constraints>
-          <grid row="1" column="0" row-span="1" col-span="4" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="171"/>
-          </grid>
-        </constraints>
-        <properties>
-          <autoResizeMode value="1"/>
-        </properties>
-      </component>
       <component id="1870" class="javax.swing.JButton" binding="editClientButton">
         <constraints>
           <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Editar cliente"/>
-        </properties>
-      </component>
-      <component id="52496" class="javax.swing.JButton" binding="deleteClientButton">
-        <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Excluir cliente"/>
         </properties>
       </component>
       <vspacer id="13439">
@@ -48,20 +30,46 @@
           </grid>
         </constraints>
       </vspacer>
+      <component id="f4f76" class="javax.swing.JButton" binding="addClientButton">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Adicionar novo"/>
+        </properties>
+      </component>
+      <scrollpane id="2bc14">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="800" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="38adf" class="javax.swing.JTable" binding="clientTable">
+            <constraints/>
+            <properties>
+              <autoResizeMode value="1"/>
+              <preferredScrollableViewportSize width="800" height="400"/>
+            </properties>
+          </component>
+        </children>
+      </scrollpane>
+      <component id="52496" class="javax.swing.JButton" binding="deleteClientButton">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Excluir cliente"/>
+        </properties>
+      </component>
       <component id="d9be0" class="javax.swing.JButton" binding="refreshTableButton">
         <constraints>
           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Atualizar tabela"/>
-        </properties>
-      </component>
-      <component id="f4f76" class="javax.swing.JButton" binding="addClientButton">
-        <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Adicionar novo"/>
         </properties>
       </component>
     </children>
