--- a/src/main/java/views/MainView.form
+++ b/src/main/java/views/MainView.form
@@ -1,65 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="views.MainView">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="232" height="400"/>
+      <xy x="20" y="20" width="380" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
-    <children>
-      <component id="8af32" class="javax.swing.JButton" binding="clientsListButton">
-        <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="503" height="30"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value="Gerenciar clientes"/>
-        </properties>
-      </component>
-      <component id="ca497" class="javax.swing.JButton" binding="addressListButton">
-        <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="503" height="30"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value="Gerenciar Endereços"/>
-        </properties>
-      </component>
-      <component id="38a3b" class="javax.swing.JButton" binding="manageLinesButton">
-        <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="503" height="30"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value="Gerenciar linhas"/>
-        </properties>
-      </component>
-      <hspacer id="1413">
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="67" height="11"/>
-          </grid>
-        </constraints>
-      </hspacer>
-      <hspacer id="e1da7">
-        <constraints>
-          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="67" height="-1"/>
-          </grid>
-        </constraints>
-      </hspacer>
-      <component id="cd023" class="javax.swing.JButton" binding="gerenciarTelefonesButton" default-binding="true">
-        <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Gerenciar telefones"/>
-        </properties>
-      </component>
-    </children>
+    <children/>
   </grid>
 </form>
